--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "pkcs7 encrypt decrypt padding pkcs"
   ],
   "devDependencies": {
+    "grunt-browserify": "^2.1.4",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt-contrib-watch": "^0.6.1",
+    "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
-    "jshint-stylish": "^0.2.0"
+    "time-grunt": "^0.3.1"
   },
   "scripts": {
     "test": "grunt"
