--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "description": "Add and remove pkcs7-style padding.",
   "homepage": "https://github.com/brightcove/pkcs7",
   "bugs": "https://github.com/brightcove/pkcs7/issues",
+  "engines": {
+    {
+      "npm": "^1.4.6"
+    }
+  },
   "author": {
     "name": "Brightcove"
   },
