--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://github.com/brightcove/pkcs7",
   "bugs": "https://github.com/brightcove/pkcs7/issues",
   "engines": {
-    "npm": "^1.4.6"
+    "npm": "^1.4.6",
+    "node": "^0.10"
   },
   "author": {
     "name": "Brightcove"
