--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pkcs7 encrypt decrypt padding pkcs"
   ],
   "devDependencies": {
+    "deumdify": "^1.0.4",
     "grunt-browserify": "^3.2.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.3.3",
