--- a/package.json
+++ b/package.json
@@ -26,18 +26,26 @@
     "pkcs7 encrypt decrypt padding pkcs"
   ],
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es3": "^1.0.1",
     "grunt-browserify": "^2.1.4",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt-contrib-watch": "^0.6.1",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-json": "^2.1.1",
+    "rollup-watch": "^3.2.2",
     "time-grunt": "^0.3.1"
   },
   "scripts": {
     "test": "grunt"
   },
   "bin": {
-    "pkcs7": "lib/cli.js"
+    "pkcs7": "bin/cli.js"
   }
 }
