--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "license": "Apache2",
   "files": [
-    "lib",
+    "bin",
+    "src",
     "dist"
   ],
   "keywords": [
@@ -30,8 +31,10 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es3": "^1.0.1",
+    "mkdirp": "^0.5.1",
     "nodeunit": "^0.11.0",
     "npm-run-all": "^4.0.2",
+    "rimraf": "^2.6.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-json": "^2.1.1",
@@ -39,15 +42,20 @@
     "videojs-standard": "^5.2.0"
   },
   "scripts": {
+    "prebuild": "npm run clean",
     "build": "npm-run-all -p build:*",
+    "build:js": "npm-run-all -p build:js:modules build:js:umd build:js:pad build:js:unpad",
     "build:js:modules": "rollup -c scripts/modules.rollup.js",
     "build:js:umd": "rollup -c scripts/umd.rollup.js",
     "build:js:pad": "rollup -c scripts/pad.rollup.js",
     "build:js:unpad": "rollup -c scripts/unpad.rollup.js",
     "build:test": "rollup -c scripts/test.rollup.js",
+    "clean": "rimraf dist test/dist",
+    "postclean": "mkdirp dist test/dist",
     "lint": "vjsstandard",
-    "pretest": "npm-run-all build:test",
-    "test": "nodeunit test/dist/pkcs7_test.js"
+    "pretest": "npm-run-all lint build:test",
+    "test": "nodeunit test/dist/pkcs7_test.js",
+    "prepublish": "npm run build"
   },
   "bin": {
     "pkcs7": "bin/cli.js"
