--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "license": "Apache2",
   "files": [
-    "lib",
+    "bin",
+    "src",
     "dist"
   ],
   "keywords": [
@@ -26,18 +27,51 @@
     "pkcs7 encrypt decrypt padding pkcs"
   ],
   "devDependencies": {
-    "grunt-browserify": "^2.1.4",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt-contrib-watch": "^0.6.1",
-    "jshint-stylish": "^0.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "babel-cli": "^6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es3": "^1.0.1",
+    "mkdirp": "^0.5.1",
+    "nodeunit": "^0.11.0",
+    "npm-run-all": "^4.0.2",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-json": "^2.1.1",
+    "rollup-watch": "^3.2.2",
+    "videojs-standard": "^5.2.0"
   },
   "scripts": {
-    "test": "grunt"
+    "prebuild": "npm run clean",
+    "build": "npm-run-all -p build:*",
+    "build:js": "npm-run-all -p build:js:modules build:js:umd build:js:pad build:js:unpad",
+    "build:js:modules": "rollup -c scripts/modules.rollup.js",
+    "build:js:umd": "rollup -c scripts/umd.rollup.js",
+    "build:js:pad": "rollup -c scripts/pad.rollup.js",
+    "build:js:unpad": "rollup -c scripts/unpad.rollup.js",
+    "build:test": "rollup -c scripts/test.rollup.js",
+    "clean": "rimraf dist test/dist",
+    "postclean": "mkdirp dist test/dist",
+    "lint": "vjsstandard",
+    "pretest": "npm-run-all lint build:test",
+    "test": "nodeunit test/dist/pkcs7_test.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:js": "npm-run-all -p watch:js:modules watch:js:umd watch:js:pad watch:js:unpad",
+    "watch:js:modules": "rollup -c scripts/modules.rollup.js -w",
+    "watch:js:umd": "rollup -c scripts/umd.rollup.js -w",
+    "watch:js:pad": "rollup -c scripts/pad.rollup.js -w",
+    "watch:js:unpad": "rollup -c scripts/unpad.rollup.js -w",
+    "watch:test": "rollup -c scripts/test.rollup.js -w",
+    "prepublish": "npm run build"
   },
   "bin": {
-    "pkcs7": "lib/cli.js"
+    "pkcs7": "bin/cli.js"
+  },
+  "vjsstandard": {
+    "ignore": [
+      "dist",
+      "docs",
+      "test/dist"
+    ]
   }
 }
