Relaxed engines declaration in package.json to support newer versions of node and npm

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "homepage": "https://github.com/brightcove/pkcs7",
   "bugs": "https://github.com/brightcove/pkcs7/issues",
   "engines": {
-    "npm": "^1.4.6",
-    "node": "^0.10"
+    "npm": ">=1.4.6",
+    "node": ">=0.10"
   },
   "author": {
     "name": "Brightcove"
