--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "conventional-changelog-videojs": "^3.0.0",
     "doctoc": "^1.3.1",
     "husky": "^1.0.0-rc.13",
-    "in-publish": "^2.0.0",
     "jsdoc": "https://github.com/BrandonOCasey/jsdoc#feat/plugin-from-cli",
     "karma": "^3.0.0",
     "lint-staged": "^7.2.2",
@@ -51,7 +50,8 @@
     "sinon": "^6.1.5",
     "videojs-generate-karma-config": "~3.0.0",
     "videojs-generate-rollup-config": "~2.2.0",
-    "videojs-standard": "^7.1.0"
+    "videojs-standard": "~7.1.0",
+    "videojs-generator-verify": "~1.0.4"
   },
   "scripts": {
     "prebuild": "npm run clean",
@@ -76,7 +76,7 @@
     "watch": "npm-run-all -p watch:*",
     "watch:js": "npm run build:js -- -w",
     "watch:test": "npm run test:node -- -w",
-    "prepublish": "not-in-install && npm run build && pkg-ok || in-install"
+    "prepublishOnly": "npm run build && vjsverify"
   },
   "bin": {
     "pkcs7": "bin/cli.js"
@@ -89,7 +89,7 @@
     ]
   },
   "generator-videojs-plugin": {
-    "version": "7.2.4"
+    "version": "7.3.2"
   },
   "browserslist": [
     "defaults",
