--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "index.html",
     "scripts/",
     "src/",
-    "test/"
+    "test/",
+    "bin"
   ],
   "keywords": [
     "pkcs7",
@@ -30,53 +31,38 @@
     "videojs-plugin"
   ],
   "dependencies": {
-    "global": "^4.3.2"
+    "@babel/runtime": "^7.5.5"
   },
   "devDependencies": {
-    "conventional-changelog-cli": "^2.0.1",
-    "conventional-changelog-videojs": "^3.0.0",
-    "doctoc": "^1.3.1",
-    "husky": "^1.0.0-rc.13",
-    "jsdoc": "https://github.com/BrandonOCasey/jsdoc#feat/plugin-from-cli",
-    "karma": "^3.0.0",
-    "lint-staged": "^7.2.2",
-    "nodeunit": "^0.11.3",
-    "not-prerelease": "^1.0.1",
-    "npm-merge-driver-install": "^1.0.0",
-    "npm-run-all": "^4.1.5",
-    "pkg-ok": "^2.2.0",
-    "rollup": "^0.65.0",
-    "shx": "^0.3.2",
-    "sinon": "^6.1.5",
-    "videojs-generate-karma-config": "~3.0.0",
-    "videojs-generate-rollup-config": "~2.2.0",
-    "videojs-generator-verify": "^1.2.0",
-    "videojs-standard": "~7.1.0"
+    "rollup": "^1.19.4",
+    "@videojs/generator-helpers": "~1.2.0",
+    "karma": "^4.0.0",
+    "postcss-cli": "^6.0.0",
+    "sinon": "^7.2.2",
+    "videojs-generate-karma-config": "~5.3.0",
+    "videojs-generator-verify": "~1.2.0",
+    "videojs-generate-rollup-config": "~5.0.0",
+    "videojs-standard": "^8.0.3"
   },
   "scripts": {
-    "prebuild": "npm run clean",
-    "build": "npm-run-all -p build:*",
+    "build-test": "cross-env-shell TEST_BUNDLE_ONLY=1 'npm run build'",
+    "build-prod": "cross-env-shell NO_TEST_BUNDLE=1 'npm run build'",
+    "build": "npm-run-all -s clean -p build:*",
     "build:js": "rollup -c scripts/rollup.config.js",
-    "clean": "shx rm -rf ./dist ./test/dist",
-    "postclean": "shx mkdir -p ./dist ./test/dist",
-    "docs": "npm-run-all docs:*",
-    "docs:api": "jsdoc src -g plugins/markdown -r -d docs/api",
-    "docs:toc": "doctoc README.md",
+    "clean": "shx rm -rf ./dist ./test/dist && shx mkdir -p ./dist ./test/dist",
     "lint": "vjsstandard",
-    "server": "karma start scripts/karma.conf.js --singleRun=false --auto-watch",
+    "prepublishOnly": "npm-run-all build-prod && vjsverify --verbose",
     "start": "npm-run-all -p server watch",
-    "pretest": "npm-run-all lint build",
-    "test": "npm-run-all -p test:browser test:node",
+    "server": "karma start scripts/karma.conf.js --singleRun=false --auto-watch",
+    "test": "npm-run-all lint build-test -p test:*",
     "test:browser": "karma start scripts/karma.conf.js",
     "test:node": "qunit test/dist/bundle.js",
     "posttest": "shx cat test/dist/coverage/text.txt",
-    "update-changelog": "conventional-changelog -p videojs -i CHANGELOG.md -s",
     "preversion": "npm test",
     "version": "is-prerelease || npm run update-changelog && git add CHANGELOG.md",
+    "update-changelog": "conventional-changelog -p videojs -i CHANGELOG.md -s",
     "watch": "npm-run-all -p watch:*",
-    "watch:js": "npm run build:js -- -w",
-    "watch:test": "npm run test:node -- -w",
-    "prepublishOnly": "npm run build && vjsverify"
+    "watch:js": "npm run build:js -- -w"
   },
   "bin": {
     "pkcs7": "bin/cli.js"
@@ -89,7 +75,7 @@
     ]
   },
   "generator-videojs-plugin": {
-    "version": "7.3.2"
+    "version": "7.7.0"
   },
   "browserslist": [
     "defaults",
@@ -106,7 +92,7 @@
       "git add"
     ],
     "README.md": [
-      "npm run docs:toc",
+      "doctoc --notitle",
       "git add"
     ]
   }
